tweaked primary color, uppercased all h1 tags

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,7 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: hsl(205.9,98.58%,27.65%);
+  --primary: hsl(206, 99%, 28%);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: hsl(32.6,93.99%,54.31%);
   --secondary-foreground: oklch(0.205 0 0);
